# glimpse

./: .gitignore  .travis.yml  0001-boost-avoid-versioned-sonames.patch  LICENSE  README.md  android-aarch64-cross-file.txt  android-arm64-cross-file.txt  android-armeabi-v7a-cross-file.txt  build-third-party.sh  build_apk.py  eigen-already-aligned.patch  glimpse-gdb.sh  glimpse-gdbserver.sh  glimpse-jdb.sh  install_glimpse.py  install_unity_libs.py  ios-11-arm64-cross-file.txt  ios-xcode-arm64-cross-file.txt  meson.build  meson_options.txt  remote_osx_codesign.sh  windows-sdk-build.py
android-tools/: download-sysroot.py
blender/: README.md  enable-addons.py  glimpse-cli.py  install-addons.sh
blender/addons/glimpse_data_generator/: __init__.py
blender/addons/mesh_paint_rig/: __init__.py
blender/modules/: priodict.py
build-third-party/: 0001-boost-filesystems-avoid-_FILE_OFFSET_BITS-64-broken-.patch
src/: README.md  annotate_bone_map.cc  basename-compat.c  basename-compat.h  compare-tests.py  depth2labels.cc  exr-to-pfm.cc  file_compat.h  gen-jobs.py  getline-compat.c  getline-compat.h  getopt-compat.c  getopt-compat.h  glimpse.h  glimpse_assets.c  glimpse_assets.h  glimpse_config.cc  glimpse_config.h  glimpse_context.cc  glimpse_context.h  glimpse_data.cc  glimpse_data.h  glimpse_device.cc  glimpse_device.h  glimpse_gl.c  glimpse_gl.h  glimpse_imgui_darwin_shell.h  glimpse_imgui_darwin_shell.mm  glimpse_imgui_shell.cc  glimpse_imgui_shell.h  glimpse_imgui_shell_impl.h  glimpse_log.c  glimpse_log.h  glimpse_mem_pool.cc  glimpse_mem_pool.h  glimpse_mutex.c  glimpse_mutex.h  glimpse_os.c  glimpse_os.h  glimpse_properties.cc  (+71 more)
src/android/: AndroidManifest.xml  create_apk.sh
src/android_stub/: jni.h
src/android_stub/android/: asset_manager_jni.h
src/glimpse_service_android/: AndroidManifest.xml
src/glimpse_service_android/res/values/: strings.xml
src/glimpse_viewer_android/: AndroidManifest.xml
src/glimpse_viewer_android/res/values/: strings.xml
src/imgui/: imgui_impl_glfm.cpp  imgui_impl_glfm.h  imgui_impl_glfm_gles3.cpp  imgui_impl_glfm_gles3.h  imgui_impl_glfw_gles3.cpp  imgui_impl_opengl3.cpp  profiler.cpp  profiler.h  stb_textedit.h  timer.cpp  timer.h
src/imgui/darwin/: IMGUIMetalAppDelegate.h  IMGUIMetalAppDelegate.m  IMGUIMetalRenderer.h  IMGUIMetalRenderer.mm  IMGUIMetalViewController.h  IMGUIMetalViewController.mm
src/java/: meson.build
src/java/com/impossible/glimpse/: GlimpseConfig.java.in  GlimpseJNI.java  GlimpseNativeActivity.java  GlimpseService.java  GlimpseTest.java  GlimpseUnityActivity.java  meson.build
src/pthread_barrier/: pthread_barrier.h
src/python/: Makefile  README.md  glimpse_python.cc  glimpse_python.h  infer.py  setup.cfg  setup.py
src/viewer/: server.js
src/win32/: dirent.h
subprojects/: boost.wrap  dlib.wrap  eigen3.wrap  flann.wrap  glfm.wrap  glfw.wrap  glm.wrap  libepoxy.wrap  libfreenect.wrap  libpng.wrap  librealsense.wrap  opencv.wrap  pcl.wrap  zlib.wrap
subprojects/packagecache/: boost-wrap-1.65.1.tar  boost-wrap-1.69.0.tar  eigen-wrap-3.3.4.tar  flan-wrap-1.9.1.tar  flann-wrap-1.9.1.tar  freenect-wrap.tar  glm-wrap-0.9.9-a2.tar  libpng-wrap-1.6.17.tar  opencv-wrap.tar  zlib-1.2.8-wrap.tar
training/: Makefile  README.md  depth2labels.cc  exr-to-pfm.cc  find-redundant-images.sh  glimpse-viewer.js  glimpse_context.cc  glimpse_context.h  glimpse_device.cc  glimpse_device.h  glimpse_unity.cc  glimpse_viewer.cc  half.hpp  image-pre-processor.cc  image_utils.cc  image_utils.h  indexer.py  infer.cc  infer.h  jip-to-json.c  joint-map.json  json-to-jnt.py  json-to-rdt.c  json-to-rdt.py  labeled-human-mesh-instructions.txt  llist.c  llist.h  loader.cc  loader.h  mocap-index.json  pack-info.py  pack-training-data.cc  pack.c  pack.h  rdt-to-json.c  train_joint_params.cc  train_rdt.cc  train_utils.cc  train_utils.h  utils.h  (+2 more)
training/android_stub/android/: asset_manager.h  log.h
training/imgui/: imgui_impl_glfw_gles3.h  timer.cpp  timer.h
training/labelling/: Makefile  depth2labels.cc  example-bones.json  infer.cc  infer.h  infer.py  json-to-jnt.py  llist.cc  loader.cc  loader.h  train.cc  train.py  train_joint_params.cc  train_rdt.cc  train_utils.cc  train_utils.h  utils.cc  utils.h  xalloc.cc  xalloc.h
training/py/: pack.py
training/python/: Makefile  README.md  __init__.py  glimpse.i  glimpse_python.cc  glimpse_python.h  infer.py  setup.py
training/tools/: Makefile  exr-to-pfm.cc  glimpse-viewer.html  glimpse-viewer.js  image-pre-processor.cc  llist.h  pack-info.py  pack-training-data.cc  pack.h  pfm-debug.c  pfm-to-exr.cc
training/viewer/: index.html  package.json
travis/: Dockerfile  README.md  build-travis-docker-image.sh  travis-ci-build.sh  travis-ci-check-training-data.sh  travis-ci-prep-docker-image.sh  travis-ci-render.sh  travis-ci-train.sh
windows-cross-test/: cross.sh  hello.c
xcode/GlimpseViewer/Glimpse Viewer.xcodeproj/: project.pbxproj
xcode/GlimpseViewer/GlimpseViewer/: Info.plist  simple.frag
